Update many stuff... It is a mess now

--- a/data/client.conf
+++ b/data/client.conf
@@ -8,9 +8,12 @@ nobind
 persist-key
 persist-tun
 
-ca      /root/openvpn-master/sample/sample-keys/ca.crt
-cert    /root/openvpn-master/sample/sample-keys/client.crt
-key     /root/openvpn-master/sample/sample-keys/client.key
+;ca      /root/openvpn-master/sample/sample-keys/ca.crt
+;cert    /root/openvpn-master/sample/sample-keys/client.crt
+;key     /root/openvpn-master/sample/sample-keys/client.key
+ca      /root/data/pq/test-ca.crt
+cert    /root/data/pq/rlwe128-crt.crt
+key     /root/data/pq/rlwe128-prv.pem
 
 remote-cert-tls server
 
