--- a/data/server.conf
+++ b/data/server.conf
@@ -2,10 +2,15 @@ local 192.168.8.8
 port 1194
 proto tcp
 dev tun
-ca      /root/openvpn-master/sample/sample-keys/ca.crt
-cert    /root/openvpn-master/sample/sample-keys/server.crt
-key     /root/openvpn-master/sample/sample-keys/server.key
+
 dh      /root/openvpn-master/sample/sample-keys/dh2048.pem
+
+;ca      /root/openvpn-master/sample/sample-keys/ca.crt
+;cert    /root/openvpn-master/sample/sample-keys/server.crt
+;key     /root/openvpn-master/sample/sample-keys/server.key
+ca      /root/data/pq/test-ca.crt
+cert    /root/data/pq/rlwe128-crt.crt
+key     /root/data/pq/rlwe128-prv.pem
 
 server 10.8.0.0 255.255.255.0
 ifconfig-pool-persist ipp.txt
@@ -22,3 +27,5 @@ persist-key
 persist-tun
 status openvpn-status.log
 verb 3
+
+tls-cipher TLS-ECDHE-RSA-WITH-AES-256-GCM-SHA384:TLS-RLWEMAKE128-WITH-AES-128-GCM-SHA256
